--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="./Public/style.css">
     <script src="./Public/index.js" async></script>
     <link rel="shortcut icon" href="./Public/Images/antyrbis/antyrbis_blue.svg" type="image/x-icon">
-    <title>Page 1</title>
+    <title></title>
 </head>
 <body>
     <main>
-        
+
     </main>
 </body>
 </html>
