--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <main>
-
+        <label class="switch" onchange="setTheme()">
+            <input type="checkbox">
+            <span id="slider"></span>
+        </label>
     </main>
 </body>
 </html>
